--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "spacestagram",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://itolimaesther.github.io/shopify-spacestagram/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
@@ -11,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
     "dotenv": "^14.2.0",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-push-notification": "^1.3.0",
